# mock/swagger.yml
@@ -117,6 +117,35 @@ paths:
                           $ref: "#/components/schemas/User"
         401:
           $ref: "#/components/responses/Unauthorized"
+  /params:
+    get:
+      tags:
+        - params
+      summary: Get params list
+      description: Return a list of params
+      operationId: getParams
+      security:
+        - AccessTokenAuth: []
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    format: int32
+                  data:
+                    type: object
+                    properties:
+                      items:
+                        type: array
+                        items:
+                          $ref: "#/components/schemas/Params"
+        401:
+          $ref: "#/components/responses/Unauthorized"
   /merchants:
     get:
       tags:
@@ -433,6 +462,30 @@ components:
           - key
           - name
           - routes
+      Params:
+        type: object
+        properties:
+          id:
+            type: integer
+            format: int64
+          model:
+            type: string
+            example: 7ac44ed3-e773-46dd-8461-9a45a2b565b1
+          name:
+            type: string
+            example: Google
+          status:
+            type: integer
+            example: 0
+          desc:
+            type: string
+            format: url
+        required:
+          - id
+          - model
+          - name
+          - status
+          - desc    
       Merchant:
         type: object
         properties:
