# src/api/params.ts
@@ -1,0 +1,7 @@
+import request from '@/utils/request'
+export const getParams = (params: any) =>
+  request({
+    url: '/params',
+    method: 'get',
+    params
+  })
